# fc-sci-1GSingles-PickOpt

./: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  TF_linear.py  autobatching_op_rules_sim.ipynb  build.gradle  gradle.properties  pyproject.toml  settings.gradle  settings.json
data_store/config/: data_load_config.yaml
gradle/wrapper/: gradle-wrapper.properties
pick_optimization/: README.md  __init__.py  end_to_end_test.ipynb  end_to_end_test.py  env_setup.py  main.ipynb  main.py  platform_utils.py  requirements.txt  setup.py  ta_test.py  tf_test.py
pick_optimization/config/: __init__.py  config.yaml  config_loader.py  gurobi_config.yaml
pick_optimization/data/: __init__.py  container_data.csv  data_load_config.yaml  data_puller.py  data_validator.py  pending_tours_by_aisle.csv  slotbook_data.csv  tour_allocation_config.yaml  tour_formation_config.yaml
pick_optimization/engine/: results.py  sim_engine.py  slack_calculator.py
pick_optimization/input/: container_data-manual.csv  slotbook_data-manual.csv
pick_optimization/tour_allocation/: __init__.py  ta_data.py  ta_data_exchange.py  ta_entry.py  ta_main.py  ta_model.py  ta_solver.py  tour_buffer.py  utils.py
pick_optimization/tour_formation/: __init__.py  data_exchange.py  linear_clustering copy.py  linear_clustering.py  (+12 more)
root/: requirements.txt
scripts/: entrypoint.bash
simulator/: __init__.py  end_to_end_simulation.py
tests/: cluster_selection.py  container_clustering_old.py  gnn_clustering.py  hdbscan_clustering.py  hdbscan_config.yaml  hdbscan_test.ipynb  two_phase_clustering.ipynb
(+59 files in other folders)
